# qtfm

./: .gitignore  .gitmodules  .qmake.conf  .travis.yml  AUTHORS  CMakeLists.txt  CNAME  ChangeLog  README.md  _config.yml  ci.sh  fix-qtfm.sh  lumina-files.desktop  lumina-files.pro  qrc_resources.cpp  qtfm.SlackBuild  qtfm.desktop  qtfm.pri  qtfm.pro  qtfm.qrc  resources.qrc
.github/workflows/: c-cpp.yml
desktop/: desktop.pro
desktop/launcher/: dialog.cpp  dialog.h  launcher.pro
doc/: CNAME
docs/: README.md  _config.yml
extra/open/: dialog.cpp  dialog.h
fm/: Info.plist  applicationdock.cpp  applicationdock.h  fm.pro  qtfm.1  qtfm.8  qtfm.desktop  qtfm.qrc
fm/images/: QtFM.icns
fm/src/: aboutdialog.cpp  aboutdialog.h  actiondefs.cpp  actiontriggers.cpp  applicationdialog.cpp  applicationdialog.h  bookmarkmodel.h  bookmarks.cpp  common.h  customactionsmanager.cpp  desktopfile.cpp  desktopfile.h  dfmqtreeview.cpp  dfmqtreeview.h  fileutils.cpp  fileutils.h  fm.cpp  fm.h  icondlg.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mimeutils.cpp  mymodel.cpp  mymodel.h  mymodelitem.cpp  processdialog.cpp  propertiesdlg.cpp  settingsdialog.cpp  settingsdialog.h  tabbar.cpp
fm/translations/: qtfm_no.ts
fm7/: README.md  fm7.pro  main.cpp  qtfm.cpp  qtfm.h
launcher/: dialog.cpp  dialog.h  launcher.pro  main.cpp
libdisks/: LICENSE  README.md  disks.cpp  libdisks.pro  udisks2.h
libfm/: applicationdialog.cpp  applicationdialog.h  bookmarkmodel.cpp  bookmarkmodel.h  common.cpp  common.h  completer.cpp  completer.h  customactionsmanager.cpp  customactionsmanager.h  delegates.cpp  delegates.h  desktopfile.cpp  desktopfile.h  dfmqstyleditemdelegate.cpp  dfmqstyleditemdelegate.h  dfmqtreeview.cpp  dfmqtreeview.h  disks.cpp  disks.h  fileutils.cpp  fileutils.h  fm.cpp  fm.h  icondlg.cpp  icondlg.h  iconlist.cpp  iconlist.h  iconview.cpp  iconview.h  libfm.pro  mimeutils.cpp  mimeutils.h  mymodel.cpp  mymodel.h  mymodelitem.cpp  mymodelitem.h  processdialog.h  progressdlg.cpp  progressdlg.h  (+18 more)
libfm/qtcopydialog/: qtcopydialog.cpp  qtcopydialog.h  qtfilecopier.cpp  qtfilecopier.h
libfm/qtcopydialog/doc/: index.qdoc
libfm/qtcopydialog/doc/html/: index.html  qtcopydialog-members.html  qtcopydialog.dcf  qtcopydialog.html  qtcopydialog.index  qtcopydialog.qch  qtcopydialog.qhp  qtfilecopier-members.html  qtfilecopier.html
open/: dialog.cpp  dialog.h  open.pro
pasture/: CHANGELOG  README.txt  TODO.txt
pasture/translations/: qtfm_de.ts  qtfm_fr.ts  qtfm_pl.ts  qtfm_sr.ts  qtfm_sv.ts  qtfm_zh.ts
power/: common.h  power.pro
power/settings/: dialog.cpp  dialog.h  qtfm-power-settings.desktop  res.qrc  settings.pro
power/systray/: main.cpp  qtfm-power.desktop  systray.cpp  systray.h  systray.pro  systray.qrc
qtfm7/: qtfm.cpp  qtfm.h  qtfm7.pro
settings/: settings.pro
settings/mime/: main.cpp  mime.pro  qtfm-settings-mime.desktop  settingsdialog.cpp  settingsdialog.h
share/: ci.sh  ffmpeg.pri  imagemagick.pri  qtfm.pri  qtfm.qrc
src/: aboutdialog.cpp  actiondefs.cpp  actiontriggers.cpp  applicationdialog.h  bookmarkmodel.h  bookmarks.cpp  customactionsmanager.cpp  customactionsmanager.h  desktopfile.cpp  fileutils.cpp  icondlg.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mimeutils.cpp  mymodel.cpp  processdialog.cpp  processdialog.h  progressdlg.cpp  progressdlg.h  properties.cpp  propertiesdlg.cpp  propertiesdlg.h  settingsdialog.cpp  settingsdialog.h  tabbar.h
translations/: qtfm_XX.ts  qtfm_da.ts  qtfm_es.ts  qtfm_it.ts  qtfm_ru.ts  qtfm_zh_TW.ts
tray/: README.md  main.cpp  qtfm-tray.1  qtfm-tray.8  qtfm-tray.desktop  systray.cpp  systray.h  tray.pro
utils/: utils.pro
utils/launcher/: dialog.cpp  dialog.h  main.cpp
utils/tray/: README.md  qtfm-tray.1  systray.cpp  systray.h  tray.pro  tray.qrc
